--- a/nb/Merge ROC and PRC Curve.ipynb
+++ b/nb/Merge ROC and PRC Curve.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Process the group information\n",
-    "if (merged_data.has_key('groups') and all([len(x)>1 or x.item() is not None for x in merged_data['groups']])):\n",
+    "if (merged_data.has_key('groups') and all([x.size>1 or x.item() is not None for x in merged_data['groups']])):\n",
     "    num_data = [x.shape[0] for x in merged_data['data']]\n",
     "    cumnum = np.cumsum(num_data)\n",
     "    for i in range(1, len(merged_data['groups'])):\n",
